syntax = "proto3";

package quote;

service QuoteService {
    rpc FindOneQuoteById (FindOneQuoteByIdDto) returns (Quote) {};
    rpc RandDomQuote(Empty) returns (Quote) {}
    rpc CreateQuote(CreateQuoteDto) returns (Quote){}
    rpc RemoveQuoteById(FindOneQuoteByIdDto) returns (RemoveQuoteCount) {}
    rpc UpdateQuote(UpdateQuoteDto) returns (UpdateQuoteCount){}
}

message Empty {}

message UpdateQuoteCount {
  int32 count = 1;
  bool hasUpdated= 2;
}
message RemoveQuoteCount {
  int32 count = 1;
  bool hasDeleted = 2;
}

message Quote {
    string id = 1;
    string content = 2;
    string author = 3;
}

message FindOneQuoteByIdDto {
    string id = 1;
}

message CreateQuoteDto {
    string content = 1;
    string author = 2;
}

message UpdateQuoteDto {
    string id = 1;
    optional string content = 2;
    optional string author = 3;
}
